# spiffy

./: CMakeLists.txt  README.md  smili.qrc
apps/: CMakeLists.txt
apps/spiffy/: CMakeLists.txt  spiffy.cxx
include/: milxFile.h  milxGlobal.h  milxImage.h
include/Qt/: milxQtImage.h
resources/: spiffy.rc  style.qss
src/: CMakeLists.txt
src/Qt/: CMakeLists.txt  milxQtImage.cpp  milxQtRenderWindow.cpp
tests/: CMakeLists.txt  testFile.cxx
tests/milxFileTest/: CMakeLists.txt
tests/milxQtRenderWindowTest/: CMakeLists.txt  milxQtRenderWindowTest.cxx
tests/milxQtWindowTest/: CMakeLists.txt  milxQtWindowTest.cxx
ui/: about.ui  milxQtAboutForm.cpp  milxQtAboutForm.h  spiffy.ui
